tdf#138897 sw: avoid creating SwUndoResetAttr in CopyImplImpl()

The problem is that SwTextNode::CopyCollFormat() both creates the
SwTextFormatColl with undo and applies it with undo.

The first is desirable, the second causes a problem because it
necessarily happens after SplitNode() and currently happens before
copying the non-start/end nodes, so the node-index may not match in
Undo, regardless if it runs before or after SwUndoCpyDoc.

But SwUndoInserts restores the SwTextFormatColl on the node itself,
so it can just be suppressed, which looks easier than refactoring this
to call SplitNode() with Undo enabled.

(regression from b4365b985178e1866c74afd757a104aad1d405a9)

Change-Id: I4d15fb88cd5ae4cc53d9afb3397dec8fcf7635fa